--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,7 +8,15 @@
 
     <!-- After adding a new view, have to rebuild the project -->
     <com.example.olgun.customviews.Views.CustomView
+        android:id="@+id/customView"
         android:layout_width="match_parent"
         android:layout_height="150dp" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:layout_below="@id/customView"
+        android:id="@+id/btn_swap_color"
+        android:text="SWAP COLOR"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</RelativeLayout>
