XML Attribute Usage Added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,9 @@
     <com.example.olgun.customviews.Views.CustomView
         android:id="@+id/customView"
         android:layout_width="match_parent"
-        android:layout_height="150dp" />
+        android:layout_height="150dp"
+        app:square_color="@color/squareColor"
+        app:square_size="100dp"/>
 
     <Button
         android:layout_below="@id/customView"
